# usd_cpp_samples

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gen_typings.py  genindex.html  index.html  meson.build  meson_ln.py  objects.inv  requirements.txt  run_usd.py  search.html  searchindex.js  test_sphere.usda  usd_iter.py  usdtweak.html  window.ini
.doctrees/: environment.pickle  index.doctree  usdtweak.doctree
IETutorials/: CMakeLists.txt  README.md
IETutorials/hydra/simpleObject/: CMakeLists.txt  SceneDelegate.cpp  main.cpp
_external/: CMakeLists.txt
_sources/: index.md.txt
build_scripts/: build_usd.py
build_usd/: index.html  minimum.html  python.html
cmake/: index.html
data/: index.html
docs/: conf.py  index.md  usdtweak.md
glfw/: CMakeLists.txt
glwindow/: CMakeLists.txt  glPlatformDebugWindowWindows.cpp  glPlatformDebugWindowWindows.h  glWindow.h  meson.build
hello/: CMakeLists.txt
hydra/: HdEngine.html  Tiny.html  UsdImagingGLEngine.html  index.html
samples/tiny/: CMakeLists.txt  mesh.h  meson.build  plugInfo.json  renderDelegate.cpp
src/: CMakeLists.txt  meson.build
src/IETutorials/hydra/: CMakeLists.txt
src/IETutorials/hydra/curves/: CMakeLists.txt  SceneDelegate.cpp  main.cpp
src/IETutorials/hydra/deformation/: SceneDelegate.h
src/IETutorials/hydra/helloWorld/: SceneDelegate.h
src/IETutorials/hydra/instancing/: SceneDelegate.cpp  main.cpp
src/IETutorials/hydra/lighting/: SceneDelegate.cpp  SceneDelegate.h  main.cpp
src/IETutorials/hydra/points/: SceneDelegate.h  main.cpp
src/IETutorials/hydra/shader/: SceneDelegate.h  main.cpp
src/IETutorials/hydra/simpleObject/: CMakeLists.txt  SceneDelegate.cpp  SceneDelegate.h
src/IETutorials/hydra/subd/: SceneDelegate.cpp  SceneDelegate.h
src/IETutorials/hydra/texturing/: SceneDelegate.h  main.cpp
src/MiniUsdImagingGLEngine/: CMakeLists.txt  meson.build
src/gl_sample/: Camera.h  GLEngine.h  HDHost.h  meson.build
src/glwindow/: glWindow.cpp
src/hd_sample/: SceneManager.cpp  meson.build  testHdxRenderer.h
src/hello/: meson.build
src/tiny/: CMakeLists.txt  main.cpp  meson.build  renderDelegate.h
src/tinyUSDHyrda/: Source.cpp  Source.h  meson.build
src/usd_source/: CMakeLists.txt
src/usd_source/extras/imaging/examples/hdTiny/: CMakeLists.txt
src/usd_source/pxr/imaging/hdx/: CMakeLists.txt  unitTestDelegate.cpp
src/usd_source/pxr/imaging/hdx/testenv/: testHdxIdRender.cpp
src/usd_source/pxr/usdImaging/usddImagingGL/: CMakeLists.txt
src/view_sample/: gui.cpp  gui.h  main.cpp  meson.build  platform.cpp  platform.h  usd_renderer.cpp  usd_renderer.h
subprojects/packagefiles/imgui/: meson.build
subprojects/packagefiles/osd/: meson.build
subprojects/packagefiles/osd/glLoader/: meson.build
subprojects/packagefiles/osd/opensubdiv/: meson.build
subprojects/packagefiles/osd/opensubdiv/osd/: glslPatchBSpline.gen.h  glslPatchBoxSplineTriangle.gen.h  glslPatchCommon.gen.h  glslPatchCommonTess.gen.h  glslPatchGregory.gen.h  glslPatchGregoryBasis.gen.h  glslPatchGregoryTriangle.gen.h  glslPatchLegacy.gen.h  patchBasisCommon.gen.h  patchBasisCommonEval.gen.h  patchBasisCommonTypes.gen.h
subprojects/packagefiles/osd/tools/stringify/: meson.build
subprojects/packagefiles/tbb/: meson.build
subprojects/packagefiles/usd/: meson.build
subprojects/packagefiles/usd/pxr/: meson.build
subprojects/packagefiles/usd/pxr/base/: meson.build
subprojects/packagefiles/usd/pxr/base/arch/: meson.build
subprojects/packagefiles/usd/pxr/base/gf/: meson.build
subprojects/packagefiles/usd/pxr/base/js/: meson.build
subprojects/packagefiles/usd/pxr/base/plug/: meson.build
subprojects/packagefiles/usd/pxr/base/tf/: meson.build
subprojects/packagefiles/usd/pxr/base/trace/: meson.build
subprojects/packagefiles/usd/pxr/base/vt/: meson.build
subprojects/packagefiles/usd/pxr/base/work/: meson.build
subprojects/packagefiles/usd/pxr/imaging/: meson.build
subprojects/packagefiles/usd/pxr/imaging/cameraUtil/: meson.build
subprojects/packagefiles/usd/pxr/imaging/garch/: meson.build
subprojects/packagefiles/usd/pxr/imaging/geomUtil/: meson.build
subprojects/packagefiles/usd/pxr/imaging/glf/: meson.build
subprojects/packagefiles/usd/pxr/imaging/hd/: meson.build
subprojects/packagefiles/usd/pxr/imaging/hdMtlx/: meson.build
subprojects/packagefiles/usd/pxr/imaging/hdSt/: meson.build
subprojects/packagefiles/usd/pxr/imaging/hdar/: meson.build
subprojects/packagefiles/usd/pxr/imaging/hdsi/: meson.build
subprojects/packagefiles/usd/pxr/imaging/hdx/: meson.build
subprojects/packagefiles/usd/pxr/imaging/hf/: meson.build
subprojects/packagefiles/usd/pxr/imaging/hgi/: meson.build
subprojects/packagefiles/usd/pxr/imaging/hgiGL/: meson.build
subprojects/packagefiles/usd/pxr/imaging/hgiInterop/: meson.build
subprojects/packagefiles/usd/pxr/imaging/hio/: meson.build
subprojects/packagefiles/usd/pxr/imaging/plugin/hdStorm/: meson.build
subprojects/packagefiles/usd/pxr/imaging/pxOsd/: meson.build
subprojects/packagefiles/usd/pxr/usd/: meson.build
subprojects/packagefiles/usd/pxr/usd/ar/: meson.build
subprojects/packagefiles/usd/pxr/usd/kind/: meson.build
subprojects/packagefiles/usd/pxr/usd/ndr/: meson.build
subprojects/packagefiles/usd/pxr/usd/pcp/: meson.build
subprojects/packagefiles/usd/pxr/usd/sdf/: meson.build
subprojects/packagefiles/usd/pxr/usd/sdr/: meson.build
subprojects/packagefiles/usd/pxr/usd/usd/: meson.build
subprojects/packagefiles/usd/pxr/usd/usdGeom/: meson.build
subprojects/packagefiles/usd/pxr/usd/usdHydra/: meson.build
subprojects/packagefiles/usd/pxr/usd/usdLux/: meson.build
subprojects/packagefiles/usd/pxr/usd/usdRender/: meson.build
subprojects/packagefiles/usd/pxr/usd/usdShade/: meson.build
subprojects/packagefiles/usd/pxr/usd/usdVol/: meson.build
subprojects/packagefiles/usd/pxr/usdImaging/: meson.build
subprojects/packagefiles/usd/pxr/usdImaging/usdImaging/: meson.build
subprojects/packagefiles/usd/pxr/usdImaging/usdImagingGL/: meson.build
usd/: CMakeLists.txt
(+124 files in other folders)
