project(
    'usd_cpp_samples',
    'cpp',
    default_options: ['cpp_std=c++17'],
)

usd_usd_dep = dependency('usd_usd', include_type: 'system')
usd_imaging_dep = dependency('usd_imaging', include_type: 'system')
usd_usdImaging_dep = dependency('usd_usdImaging', include_type: 'system')

subdir('src')
