imgui_dep = dependency('imgui')
glew_dep = dependency('glew')
glfw_dep = dependency('glfw3', default_options: ['install=true'])

subdir('glwindow')

subdir('hello')
subdir('gl_sample')
subdir('hd_sample')
subdir('tiny')
subdir('tinyUSDHyrda')
subdir('MiniUsdImagingGLEngine')
subdir('view_sample')
