executable(
    'view_sample',
    [
        'main.cpp',
        'platform.cpp',
        'gui.cpp',
        'usd_renderer.cpp',
    ],
    install: true,
    dependencies: [
        usd_usdImaging_dep,
        glfw_dep,
        glew_dep,
        imgui_dep,
        grapho_dep,
        directxmath_dep,
    ],
)
